# ooplr3

./: CMakeLists.txt
include/: Array.h  Figure.h  Pentagon.h  Rhombus.h  Trapezoid.h
lib/: Array.cpp  Pentagon.cpp  Rhombus.cpp  Trapezoid.cpp
src/: main.cpp
tests/: tests.cpp
